Be even more carefull with devices that support only play back OR capture.

Addresses PR kern/52256.